k8s/consul-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: micro-book
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul
          image: consul:1.15
          ports:
            - containerPort: 8500
          args:
            - "agent"
            - "-server"
            - "-bootstrap-expect=1"
            - "-ui"
            - "-client=0.0.0.0"
            - "-bind=0.0.0.0"
---
apiVersion: v1
kind: Service
metadata:
  name: consul
  namespace: micro-book
spec:
  ports:
    - port: 8500
      targetPort: 8500
  selector:
    app: consul
